# pytrafikverket

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli.py  mypy.ini  package-lock.json  package.json  pylintrc  pyproject.toml  pytrafikverket.py  pytrafikverket.pyproj  pytrafikverket.sln  requirements.txt  setup.cfg  setup.py  upload.ps1
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: linting.yaml  release.yaml  typing.yaml
pytrafikverket/: __init__.py  __main__.py  const.py  exceptions.py  filters.py  helpers.py  models.py  pytrafikverket.pyproj  trafikverket.py  trafikverket_camera.py  trafikverket_ferry.py  trafikverket_train.py  trafikverket_weather.py
